--- a/public/icons/demo.html
+++ b/public/icons/demo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> ERUDITE <small class="fgc1">(Glyphs:&nbsp;78)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> ERUDITE <small class="fgc1">(Glyphs:&nbsp;80)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
@@ -704,6 +704,20 @@
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
         <div class="glyph fs2">
             <div class="clearfix bshadow0 pbs">
+                <span class="icon-whatsapp"></span>
+                <span class="mls"> icon-whatsapp</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e947" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe947;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
                 <span class="icon-linkedin-logo"></span>
                 <span class="mls"> icon-linkedin-logo</span>
             </div>
@@ -881,6 +895,20 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e901" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe901;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs3">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-info"></span>
+                <span class="mls"> icon-info</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e946" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe946;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
